adding color to forgot-section

--- a/input2.css
+++ b/input2.css
@@ -102,6 +102,7 @@ input#checked{
     display: flex;
     justify-content: space-between;
     width: 100%;
+    color: #e3e3e3;
     margin-top: -20px;
 }
 .forgot-section span{
